<resources>
    <string name="app_name">Wastlet</string>
    <string name="support">Support</string>
    <string name="support_url" translatable="false">https://lab.assemble.net</string>
    <string name="version" translatable="false">Version %s\nCopyright 2018 lab.assemble</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="ok" translatable="false">OK</string>
    <string name="total_fee">Total %s</string>
    <string name="fee">Fee</string>
    <string name="note">Note</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="budget">Budget</string>
    <string name="delete_confirm">Are you sure to delete?</string>
    <string name="deleted">Deleted.</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="error_fee_invalid">Input correct digit.</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_in_google">Sign-in by Google Account</string>
    <string name="sign_in_description">We collect personal information in order to provide the service and manage it appropriately according to the privacy policy.</string>
    <string name="error_login_failed">Login failed.\n%s</string>
    <string name="welcome_user">Welcome, %s</string>
</resources>
