<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.assemble.android.mywallet.fragment.ItemEditFragment">

    <data>

        <variable
            name="viewModel"
            type="net.assemble.android.mywallet.fragment.ItemEditFragment.ItemEditViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/itemFeeEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:hint="@string/fee"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        android:text="@={viewModel.fee}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/itemTitleEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.note}" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:id="@+id/itemDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/date"
                        android:inputType="none"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.date}"
                        android:textIsSelectable="false"
                        tools:ignore="TextFields" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ok" />
    </LinearLayout>
</layout>
